tiny-fix gallery spacing

--- a/assets/sass/_theme/blocks/gallery.sass
+++ b/assets/sass/_theme/blocks/gallery.sass
@@ -39,6 +39,8 @@
                 @include grid(2)
                 grid-gap: half($grid-gutter-sm) !important
             &--with-text
+                @include in-page-without-sidebar
+                    @include grid(4, desktop, $spacing0)
                 figure
                     display: grid
                     grid-template-columns: subgrid
@@ -46,7 +48,6 @@
                     figcaption
                         &::after
                             content: ' '
-
     &--carousel
         overflow: hidden
         position: relative
